Added a much better permission check system

--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context="com.cfahlin.mealpicker.MapsActivity">
+    tools:context="com.cfahlin.mealpicker.view.MapsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -21,6 +21,6 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.cfahlin.mealpicker.MapsActivity" />
+        tools:context="com.cfahlin.mealpicker.view.MapsActivity" />
 
 </android.support.constraint.ConstraintLayout>
