--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cfahlin.mealpicker.MapsActivity">
+    tools:context="com.cfahlin.mealpicker.view.MapsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -19,6 +19,6 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.cfahlin.mealpicker.MapsActivity" />
+        tools:context="com.cfahlin.mealpicker.view.MapsActivity" />
 
 </android.support.constraint.ConstraintLayout>
